// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UninstallModal component should be rendered correctly (app uninstallable) 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    closable={true}
    dismissAction={[Function]}
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
  >
    <ModalContent>
      <AnimatedContentHeader
        activeClassName="sto-animated-header--active"
        className="sto-animated-header"
      >
        <img
          alt="photos-icon"
          className="sto-animated-header-icon"
          height="56"
          src="<svg></svg>"
          width="56"
        />
        <Icon
          className="sto-animated-header-exchange"
          color="#95999D"
          icon="exchange"
          spin={false}
        />
        <Icon
          className="sto-animated-header-icon"
          height="56"
          icon="test-file-stub"
          spin={false}
          width="56"
        />
      </AnimatedContentHeader>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="c-btn c-btn--danger c-btn--delete"
            onClick={[Function]}
            role="button"
          >
            <span>
              Uninstall
            </span>
          </button>
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;

exports[`UninstallModal component should handle correctly error from props 1`] = `
<div
  className="sto-modal--uninstall"
>
  <Unknown
    closable={true}
    dismissAction={[Function]}
    mobileFullscreen={true}
    overflowHidden={false}
    primaryType="regular"
    secondaryType="secondary"
    size="small"
  >
    <ModalContent>
      <AnimatedContentHeader
        activeClassName="sto-animated-header--active"
        className="sto-animated-header"
      >
        <img
          alt="photos-icon"
          className="sto-animated-header-icon"
          height="56"
          src="<svg></svg>"
          width="56"
        />
        <Icon
          className="sto-animated-header-exchange"
          color="#95999D"
          icon="exchange"
          spin={false}
        />
        <Icon
          className="sto-animated-header-icon"
          height="56"
          icon="test-file-stub"
          spin={false}
          width="56"
        />
      </AnimatedContentHeader>
      <div
        className="sto-modal-content"
      >
        <ReactMarkdownWrapper
          source="This application is bound to be removed from your Cozy cozytest.mock.cc. Are you sure to __remove this application definitively__?"
        />
        <p
          className="u-error"
        >
          Something went wrong when uninstalling this application. Reason: This is a test error
        </p>
        <div
          className="sto-modal-controls"
        >
          <button
            className="c-btn c-btn--secondary"
            onClick={[Function]}
            role="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            className="c-btn c-btn--danger c-btn--delete"
            onClick={[Function]}
            role="button"
          >
            <span>
              Uninstall
            </span>
          </button>
        </div>
      </div>
    </ModalContent>
  </Unknown>
</div>
`;
